[package]
name = "accuyork_2024_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0-prefer-dynamic"] }


[lints.clippy]
#enum_glob_use = "deny"
#pedantic = "deny"
#nursery = "deny"
#unwrap_used = "deny"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
